@@ -12,6 +12,22 @@ javac --module-source-path src -d out $(find . -name "*.java")
 java --module-path out -m greeter.cli/greeter.cli.Main
 ```
 
+## Linkage (Create custom image with low footprint)
+
+not checked if working...
+
+``` Java
+rm -rf image && \
+jlink --module-path jars/:$JAVA_HOME/jmods \
+--add-modules greeter.cli \
+--add-modules greeter.provider.english \
+--add-modules greeter.provider.french \
+--add-modules greeter.provider.german \
+--strip-debug \
+--compress=2 \
+--output image
+```
+
 ### Modularity
 
 * strong encapsulation
@@ -24,3 +40,5 @@ java --module-path out -m greeter.cli/greeter.cli.Main
 * Java checks module dependencies at compile and runtime
 * module-source-path: path to modules not yet compiled
 * module-path: path to compiled modules
+* readability is not transitive. But can be implied by "requires transitive.."
+* use 'java --list-modules' to list all platform modules
